<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pier"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="date" />

            <!--  <Button
                 android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/btn_back" /> -->
         </LinearLayout>

         <EditText
             android:id="@+id/fullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/full_name"
             android:importantForAutofill="no"
             android:imeOptions="actionDone"
             android:inputType="textPersonName" />

         <EditText
             android:id="@+id/dateStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/date_start"
             android:importantForAutofill="no"
             android:imeOptions="actionDone"
             android:inputType="datetime" />

         <EditText
             android:id="@+id/dateFinish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/date_finish"
             android:importantForAutofill="no"
             android:imeOptions="actionDone"
             android:inputType="datetime" />

         <EditText
             android:id="@+id/timeStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/time_start"
             android:importantForAutofill="no"
             android:imeOptions="actionDone"
             android:inputType="datetime" />

         <EditText
             android:id="@+id/timeFinish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/time_finish"
             android:importantForAutofill="no"
             android:imeOptions="actionDone"
             android:inputType="datetime" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

             <Button
                 android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/btn_add" />

             <Button
                 android:id="@+id/btnUpd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/btn_upd" />

             <Button
                 android:id="@+id/btnCln"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="@string/btn_cln" />

         </LinearLayout>

         <!-- <Button
             android:id="@+id/btnLoad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="@string/list_load" /> -->

        <!-- <TextView
            android:id="@+id/listHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_curr"
            android:textAlignment="center"
            android:textSize="24sp" /> -->

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/list_clear" />

        <ListView
            android:id="@+id/listMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>