<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="NestedWeights"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_name"
            android:textSize="30sp" />

        <!-- <TextView
            android:id="@+id/textPier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pier"
            android:textSize="30sp" /> -->

        <!-- android:textAppearance="?android:attr/textAppearanceMedium" -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!-- <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="30sp" /> -->

        <TextView
            android:id="@+id/textID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_weight="1"
            android:text="@string/cln_id"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_shortStart"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_shortFinish"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>